--- a/datadog-yaml/prometheus_conf.yaml
+++ b/datadog-yaml/prometheus_conf.yaml
@@ -1,7 +1,7 @@
 init_config:
 
 instances:
-  - prometheus_url: http://172.17.0.2:6060/debug/metrics/prometheus
+  - prometheus_url: http://localhost:6060/debug/metrics/prometheus
     namespace: wemix3.0
     metrics:
       - "chain_head_block"
